--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -773,8 +773,8 @@ hr {
     display: block;
     border: 1px solid #E5E5E5;
     border-top: none;
-    -webkit-box-shadow: 0 0 40px 5px rgb(0, 0, 0);
-    box-shadow: 0 0 40px 5px rgb(0, 0, 0);
+    -webkit-box-shadow: 0 0 20px 0 rgb(0, 0, 0);
+    box-shadow: 0 0 20px 0 rgb(0, 0, 0);
     position: relative;
     top: 18px;
     padding-top: 30px;
