--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -46,16 +46,16 @@
                     <div class="panel">
                         <h3>Схема работы. Видео инструкция:</h3>
                         <div class="gal">
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/nl-QWPhJjM4?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/1.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/2.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/3.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/4.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/5.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/6.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/7.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/8.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/9.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/10.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/A2gzgjbQRR4?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/1.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/yRpMWAqPx4I?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/2.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/MCT1D9mfK0c?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/3.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/8HGclz7kbtI?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/4.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/dNpAFHwMyGs?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/5.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/2dRzAkP_s8E?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/6.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/HLJqSn4e364?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/7.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/gigLhBBqYxk?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/8.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/uWALQVUZHwg?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/9.jpg")"></a>
+                            @*<a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/10.jpg")"></a>*@
                         </div>
                         <span class="button">
                             <a href="@Url.Action("RegisterForm", "Account")" target="_blank"><input id="regLink" class="large" type="button" value="Регистрация" /></a>
