--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -46,15 +46,15 @@
                     <div class="panel">
                         <h3>Схема работы. Видео инструкция:</h3>
                         <div class="gal">
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/A2gzgjbQRR4?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/1.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/yRpMWAqPx4I?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/2.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/MCT1D9mfK0c?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/3.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/Gp9FgMIrwx0?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/4.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/bivoKhBFAs0?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/1.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/G956oyXPvTw?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/2.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/9vaRA195G-o?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/3.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/_KAU61fomhs?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/4.jpg")"></a>
                             <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/hiZnhCiAWcw?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/5.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/cFVB5xnFToQ?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/6.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/uNqt_TpzzGQ?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/7.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/wlYhAylW15E?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/8.jpg")"></a>
-                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/F_GFY3fjxOQ?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/9.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/v4i2j1WcsNo?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/6.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/StVH_JTqi7k?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/7.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/xy-VBXeMW-w?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/8.jpg")"></a>
+                            <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/J75OLtizYag?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/9.jpg")"></a>
                             @*<a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/4tS88S6em8Y?fs=1&amp;vq=hd720;autoplay=1"><img src="@Url.Content("~/Content/img/for-video/10.jpg")"></a>*@
                         </div>
                         <span class="button">
