--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                 <div class="text">
                     <h2>Здоровые инвестиции от 5 до 100% в месяц!</h2>
                     <p>От недельных до многолетних инвестиций. Для дерзких и консервативных инвесторов!</p>
-                    <a href="@Url.Action("BroccoliOffer")">Подробнее</a>
+                    <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/J75OLtizYag?fs=1&amp;vq=hd720;autoplay=1">Подробнее</a>
                 </div>
             </div>
             <div class="second panel">
