--- a/broccoli/BroccoliMvc/Views/Home/VPS.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/VPS.cshtml
@@ -77,7 +77,7 @@
         </table>
     </div>
     <div class="vps-info">
-        <p>Для корректной работы советника торговый терминал должен быть включенным с открытия рынка вечером в воскресенье до его закрытия вечером в пятницу. Если у вас нет возможности держать компьютер в рабочем состоянии 24/5, то советую использовать услугу VPS сервера.</p>
+        <p>Для корректной работы советника торговый терминал должен быть включенным с открытия рынка до его закрытия. Если у Вас нет возможности держать компьютер в рабочем состоянии 24/6 - советуем использовать услугу VPS сервера.</p>
         <span class="button more">
             <a href="#" target="_blank"><input class="large" type="button" value="Подробнее у ForexInn" /></a>
         </span>
