--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -32,7 +32,7 @@
             </div >
             <div class="plan plan2">
                 <div class="price-header">Garanted</div>
-                <div class="price">200-300%</div>
+                <div class="price">200 - 300%</div>
                 <div class="monthly">За 5 лет</div>  
                 <ul>
                     <li>Выставление риска <strong>Есть</strong></li>
@@ -45,7 +45,7 @@
             </div>
             <div class="plan plan3 popular-plan">
                 <div class="price-header">Max trade</div>
-                <div class="price">6000-9000%</div>
+                <div class="price">6000 - 9000%</div>
                 <div class="monthly">За 5 лет</div>
                 <ul>
                     <li>Выставление риска <strong>Есть</strong></li>
@@ -57,6 +57,7 @@
                 <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 3 })">Получить</a>        
             </div>	
         </div>
+        <p>Внимание! Вы можете заказать советник только после открытия и активации счёта на сайте Broccoli-Trade.</p>
         <br/>
         <div class="instructions">
             <ul>
