--- a/broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
@@ -9,7 +9,7 @@
         <li><a href="@Url.Action("ContactUs", "Home")">Свяжитесь с Нами</a></li>
     </ul>
     <p class="footer-text">
-        Брокколи трэйд - это сайт, где Вы можете получить советники форекс бесплатно, инструменты инвестиций, позволяющие заработать на форекс сразу. Как начать торговать на форекс не имея опыта - брокколи трэйд - лучшее решение. Здоровые инвестиции.
+        Брокколи трэйд — это сайт, где Вы можете получить советники форекс бесплатно, инструменты инвестиций, позволяющие заработать на форекс сразу. Как начать торговать на форекс не имея опыта — брокколи трэйд — лучшее решение. Здоровые инвестиции.
     </p>
-    <p class="copyright">Томск © 2012 — @DateTime.Now.Year Broccoli-Trade.</p>
+    <p class="copyright">2012 - @DateTime.Now.Year Broccoli-Trade.</p>
 </div>
