--- a/broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -29,7 +29,7 @@
             <li>7. Они рады скальперам и торговым советникам.</li>
             <li>8. Профессиональная круглосуточная техническая поддержка в торговый период.</li>
         </ul>
-        <img src="@Url.Content("~/Content/img/depositphotos_1950636-Various-vegetables-isolated.jpg")"/>
+        <img src="@Url.Content("~/Content/img/depositphotos_1950636-Various-vegetables-isolated.png")"/>
     </div>
     <div class="hr-shadow trading-terms-container">
         <h4>Торговые условия:</h4>
