--- a/broccoli/BroccoliMvc/Views/Shared/Menu.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/Menu.cshtml
@@ -43,7 +43,7 @@
                                     </td>
                                 </tr>
                             </table>
-                            <a>Забыли пароль?</a>
+                            <a href="@Url.Action("ForgotPassword", "Account")">Забыли пароль?</a>
                             <button id="submit" class="green-button">Вход</button>
                             <div class="controls">
                                 @Html.Label("Запомнить меня",new { @for = "rememberMe" })
