--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -1500,6 +1500,7 @@ hr {
     padding:8px 6px;
     width:270px;
     display:block;
+    height: 26px !important;
 }
 .box input[type=text]:focus,
 .box input[type=password]:focus,
@@ -1542,6 +1543,24 @@ hr {
 .btnLogin:active
 {
     text-shadow:rgba(0,0,0,0.3) 0 -1px 0px; 
+}
+
+.password-recovery {
+    height:230px;
+    width:332px;
+	position:absolute;
+	left:50%;
+	top:50%;
+	margin:-130px 0 0 -166px;
+}
+
+.password-sent {
+    height:150px;
+    width:332px;
+	position:absolute;
+	left:50%;
+	top:50%;
+	margin:-130px 0 0 -166px;
 }
 
 footer#main{
@@ -2169,6 +2188,13 @@ footer#main{
     padding: 10px;
     background-color: rgb(248, 255, 165);
     border: 2px solid rgb(226, 211, 100);   
+}
+
+.error-message {
+    font-size: 13px;
+    padding: 10px;
+    background-color: rgb(255, 168, 168);
+    border: 2px solid rgb(255, 94, 94);   
 }
 
 .contact-container {
