--- a/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
+    <link href="@Url.Content("~/Content/img/favicon.ico")" rel="shortcut icon" type="image/x-icon" />
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/themes/jquery-ui/jquery-ui-1.9.2.custom.css")" rel="stylesheet" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
@@ -29,7 +30,7 @@
             </div>
         </div>
         <div class="content">
-            @RenderBody()    
+            @RenderBody()       
         </div>
         <div class="footer">
             @Html.Partial("Footer")
