--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -1337,6 +1337,11 @@ hr {
     transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
 }
 
+.alt-way-container p {
+    margin-top: 10px;
+    color: rgb(143, 143, 143); 
+}
+
 .alt-way-container  #sendInvites {
     float: right;
     margin-top: 20px;
@@ -1370,6 +1375,7 @@ hr {
 .social-networks {
     width: 100%;
     display: inline-block;
+    margin-top: 30px;
 }
 
 .social-networks .buttons {
