--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/AlternativeWay.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/AlternativeWay.cshtml
@@ -42,7 +42,7 @@
         <textarea id="inviteMessage" class="inviteMessage" name="inviteMessage">Приветствую %ИМЯ%, это @UserHelper.GetUserName(), узнал про систему торговую Брокколи Трейд, позволяющую с выставлением риска инвестировать на рынок форекс. Если тебе в принципе интересны инструменты инвестиций, позволяющие зарабатывать от 5 до 100 % за месяц, пройди по ссылке <a href="http://broccoli-trade.ru?token=@HttpContext.Current.User.Identity.Name.Md5()">www.broccoli-trade.ru</a>!</textarea>
         <div id="lessSymbols"></div>
         <button id="sendInvites" type="button" class="green-button">Сделать рассылку</button>
-        <p>После отправки писем, Вы можете посмотреть статистику зарегистрировавшихся и перешедших по ссылке людей во вкладке "Статистика".</p>
+        <p>После отправки писем, Вы можете посмотреть статистику зарегистрировавшихся и перешедших по ссылке людей во вкладке <a href="@Url.Action("Statistics", "PersonalCabinet")">"Статистика"</a>.</p>
         <div class="social-networks">
             <div style="margin-bottom: 10px;">Рассказать в соц. сетях</div>
             <div class="buttons">
