--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/CabinetMenu.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/CabinetMenu.cshtml
@@ -19,7 +19,7 @@
         </li>
         <li><a href="@Url.Action("Statistics", "PersonalCabinet")">Статистика</a>
         </li>
-        <li><a href="#">Служба поддержки</a></li>
+        <li><a href="@Url.Action("Support", "PersonalCabinet")">Служба поддержки</a></li>
     </ul>
 </div>
 
