--- a/broccoli/BroccoliMvc/Views/Home/VPS.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/VPS.cshtml
@@ -13,7 +13,7 @@
     <h4>Тарифы VPS</h4>
     <div id="pricing-table">
         <div class="plan plan1">
-            <div class="price-header">Small</div>   
+            <div class="price-header">Стартовый</div>   
             <ul>
                 <li>RAM: <strong>256 Mb</strong></li>
                 <li>HDD: <strong>15 Gb</strong></li>
@@ -23,7 +23,7 @@
             <a class="signup" href="#">Выбрать</a>         
         </div >
         <div class="plan plan3">
-            <div class="price-header">Standart</div>
+            <div class="price-header">Стандартный</div>
             <ul>
                 <li>RAM: <strong>512 Mb</strong></li>
                 <li>HDD: <strong>25 Gb</strong></li>
@@ -33,7 +33,7 @@
             <a class="signup" href="#">Выбрать</a>        
         </div>	
         <div class="plan plan2 popular-plan">
-            <div class="price-header">Deluxe</div> 
+            <div class="price-header">Проф.</div> 
             <ul>
                 <li>RAM: <strong>1024 Mb</strong></li>
                 <li>HDD: <strong>60 Gb</strong></li>
@@ -49,9 +49,9 @@
             <thead>
                 <tr>
                     <th>Торговый баланс клиента</th>
-                    <th>Small VPS 256</th>
-                    <th>Standart VPS 512</th>
-                    <th>Deluxe VPS 1024</th>
+                    <th>Стартовый</th>
+                    <th>Стандартный</th>
+                    <th>Профессиональный</th>
                 </tr>
             </thead>
             <tbody>
