--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -18,16 +18,23 @@
                 <img class="broccoli" src="@Url.Content("~/Content/img/broccoli.png")"/>
                 <div class="text">
                     <h2>Здоровые инвестиции от 5 до 100% в месяц!</h2>
-                    <p>От недельных до многолетних инвестиций. Для дерзких и консервативных инвесторов!</p>
+                    <p>Выберите риск. Подходит для консервативных, уменеренных и дерзких инвесторов.</p>
                     <a class="various fancybox.iframe" title="The Falltape" href="http://www.youtube.com/embed/J75OLtizYag?fs=1&amp;vq=hd720;autoplay=1">Подробнее</a>
                 </div>
             </div>
             <div class="second panel">
-                <img class="broccoli" src="@Url.Content("~/Content/img/calc1.png")"/>
+                <img class="broccoli" src="@Url.Content("~/Content/img/for-video/10.jpg")"/>
                 <div class="text">
-                    <h2>Здоровые инвестиции от 5 до 100% в месяц!</h2>
-                    <p>От недельных до многолетних инвестиций. Для дерзких и консервативных инвесторов!</p>
-                    <a href="@Url.Action("BroccoliOffer")">Подробнее</a>
+                    <h2>Автоматизированные торговые системы для рынка форекс.</h2>
+                    <p>Уже через год успешной торговли все ваши мечты исполнятся!</p>
+                </div>
+            </div>
+            <div class="third panel">
+                <img class="broccoli" src="@Url.Content("~/Content/img/demo.png")"/>
+                <div class="text">
+                    <h2>Демо-счет.</h2>
+                    <p>воспользуйтесь нашим предложением, и попробуйте свои силы на демо счете не рискуая своим капиталом.</p>
+                    <a href="https://my.forexinn.ru/register-demo">Открыть демо счет</a>
                 </div>
             </div>
         </div>
@@ -52,7 +59,7 @@
                 </div >
                 <div class="plan plan2">
                     <div class="price-header">Garanted</div>
-                    <div class="price">200 - 300%</div>
+                    <div class="price">4000 - 6000%</div>
                     <div class="monthly">За 5 лет</div>  
                     <ul>
                         <li>Выставление риска <strong>Есть</strong></li>
